# whatsapp_integration

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
whatsapp_notifications/: api.py  events.py  hooks.py  modules.txt  patches.txt  tasks.py  utils.py
whatsapp_notifications/config/: desktop.py  docs.py
whatsapp_notifications/doctype/: __init__.py
whatsapp_notifications/doctype/evolution_api_settings/: __init__.py  evolution_api_settings.js
whatsapp_notifications/doctype/whatsapp_message_log/: whatsapp_message_log.py
whatsapp_notifications/doctype/whatsapp_notification_rule/: whatsapp_notification_rule.js
whatsapp_notifications/patches/v1_0/: create_default_settings.py
whatsapp_notifications/public/js/: whatsapp_notifications.js
whatsapp_notifications/whatsapp_notifications/: __init__.py  api.py  approval.py  events.py  install.py  modules.txt  tasks.py  utils.py  webhook.py
whatsapp_notifications/whatsapp_notifications/doctype/evolution_api_settings/: evolution_api_settings.js  evolution_api_settings.json  evolution_api_settings.py
whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_approval_option/: whatsapp_approval_option.json  whatsapp_approval_option.py
whatsapp_notifications/whatsapp_notifications/doctype/whatsapp_approval_request/: whatsapp_approval_request.json  whatsapp_approval_request.py
whatsapp_notifications/whatsapp_notifications/workspace/: whatsapp_notifications.json
(+20 files in other folders)
