[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp_notifications"
version = "1.0.0"
description = "WhatsApp Notifications for ERPNext using Evolution API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bobo", email = "bobo@entretech.co.mz"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "frappe"
]

[project.urls]
Homepage = "https://github.com/your-username/whatsapp_notifications"
Documentation = "https://github.com/your-username/whatsapp_notifications#readme"
Repository = "https://github.com/your-username/whatsapp_notifications.git"
Issues = "https://github.com/your-username/whatsapp_notifications/issues"

[tool.setuptools]
packages = ["whatsapp_notifications"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.html", "*.css", "*.js", "*.py"]
